// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paging Toolbar should handle first button click 1`] = `
<div>
  <div
    class="paging-toolbar-wrapper"
  >
    <div
      style="width: 100%; display: flex;"
    >
      <div
        style="margin: 0px auto;"
      >
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M8 28v-24h4v11l10-10v22l-10-10v11z"
            />
          </svg>
        </span>
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M18 5v10l10-10v22l-10-10v10l-11-11z"
            />
          </svg>
        </span>
        <span
          style="margin-left: 10px; margin-right: 10px; height: 8px;"
        />
        <span
          style="vertical-align: text-bottom;"
        >
          <span>
            Page
          </span>
          <input
            class="paging-toolbar-current-page"
            data-testid="current-page-input"
            max="5"
            min="0"
            type="number"
            value="1"
          />
          <span>
             of 
            5
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Next Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-next"
              style="margin-left: 10px; margin-right: 10px;"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M16 27v-10l-10 10v-22l10 10v-10l11 11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Last Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-last"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M24 4v24h-4v-11l-10 10v-22l10 10v-11z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      style="width: 100%; text-align: center; margin-top: 10px;"
    >
      <div
        style="margin: -8px auto;"
      >
        <span>
          Show
        </span>
        <input
          class="paging-records-per-page"
          data-testid="rpp-input"
          type="number"
          value="20"
        />
        <span>
          Records per Page
        </span>
        <span
          class="paging-summary"
        >
          <span>
            Displaying 0 - 20 of 100
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paging Toolbar should handle last button click 1`] = `
<div>
  <div
    class="paging-toolbar-wrapper"
  >
    <div
      style="width: 100%; display: flex;"
    >
      <div
        style="margin: 0px auto;"
      >
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              First Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-first"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M8 28v-24h4v11l10-10v22l-10-10v11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Previous Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-prev"
              style="margin-left: 10px; margin-right: 10px;"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M18 5v10l10-10v22l-10-10v10l-11-11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          style="vertical-align: text-bottom;"
        >
          <span>
            Page
          </span>
          <input
            class="paging-toolbar-current-page"
            data-testid="current-page-input"
            max="5"
            min="0"
            type="number"
            value="5"
          />
          <span>
             of 
            5
          </span>
        </span>
        <span
          style="margin-left: 10px; margin-right: 10px;"
        >
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M24 4v24h-4v-11l-10 10v-22l10 10v-11z"
            />
          </svg>
        </span>
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M16 27v-10l-10 10v-22l10 10v-10l11 11z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      style="width: 100%; text-align: center; margin-top: 10px;"
    >
      <div
        style="margin: -8px auto;"
      >
        <span>
          Show
        </span>
        <input
          class="paging-records-per-page"
          data-testid="rpp-input"
          type="number"
          value="20"
        />
        <span>
          Records per Page
        </span>
        <span
          class="paging-summary"
        >
          <span>
            Displaying 80 - 100 of 100
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paging Toolbar should handle last page 1`] = `
<div>
  <div
    class="paging-toolbar-wrapper"
  >
    <div
      style="width: 100%; display: flex;"
    >
      <div
        style="margin: 0px auto;"
      >
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M8 28v-24h4v11l10-10v22l-10-10v11z"
            />
          </svg>
        </span>
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M18 5v10l10-10v22l-10-10v10l-11-11z"
            />
          </svg>
        </span>
        <span
          style="margin-left: 10px; margin-right: 10px; height: 8px;"
        />
        <span
          style="vertical-align: text-bottom;"
        >
          <span>
            Page
          </span>
          <input
            class="paging-toolbar-current-page"
            data-testid="current-page-input"
            max="5"
            min="0"
            type="number"
            value="1"
          />
          <span>
             of 
            5
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Next Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-next"
              style="margin-left: 10px; margin-right: 10px;"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M16 27v-10l-10 10v-22l10 10v-10l11 11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Last Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-last"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M24 4v24h-4v-11l-10 10v-22l10 10v-11z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      style="width: 100%; text-align: center; margin-top: 10px;"
    >
      <div
        style="margin: -8px auto;"
      >
        <span>
          Show
        </span>
        <input
          class="paging-records-per-page"
          data-testid="rpp-input"
          type="number"
          value="20"
        />
        <span>
          Records per Page
        </span>
        <span
          class="paging-summary"
        >
          <span>
            Displaying 0 - 20 of 100
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paging Toolbar should handle next button click 1`] = `
<div>
  <div
    class="paging-toolbar-wrapper"
  >
    <div
      style="width: 100%; display: flex;"
    >
      <div
        style="margin: 0px auto;"
      >
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              First Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-first"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M8 28v-24h4v11l10-10v22l-10-10v11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Previous Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-prev"
              style="margin-left: 10px; margin-right: 10px;"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M18 5v10l10-10v22l-10-10v10l-11-11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          style="vertical-align: text-bottom;"
        >
          <span>
            Page
          </span>
          <input
            class="paging-toolbar-current-page"
            data-testid="current-page-input"
            max="5"
            min="0"
            type="number"
            value="2"
          />
          <span>
             of 
            5
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Next Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-next"
              style="margin-left: 10px; margin-right: 10px;"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M16 27v-10l-10 10v-22l10 10v-10l11 11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Last Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-last"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M24 4v24h-4v-11l-10 10v-22l10 10v-11z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      style="width: 100%; text-align: center; margin-top: 10px;"
    >
      <div
        style="margin: -8px auto;"
      >
        <span>
          Show
        </span>
        <input
          class="paging-records-per-page"
          data-testid="rpp-input"
          type="number"
          value="20"
        />
        <span>
          Records per Page
        </span>
        <span
          class="paging-summary"
        >
          <span>
            Displaying 20 - 40 of 100
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paging Toolbar should handle no records per page 1`] = `
<div>
  <div
    class="paging-toolbar-wrapper"
  >
    <div
      style="width: 100%; display: flex;"
    >
      <div
        style="margin: 0px auto;"
      >
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M8 28v-24h4v11l10-10v22l-10-10v11z"
            />
          </svg>
        </span>
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M18 5v10l10-10v22l-10-10v10l-11-11z"
            />
          </svg>
        </span>
        <span
          style="margin-left: 10px; margin-right: 10px; height: 8px;"
        />
        <span
          style="vertical-align: text-bottom;"
        >
          <span>
            Page
          </span>
          <input
            class="paging-toolbar-current-page"
            data-testid="current-page-input"
            max="2"
            min="0"
            type="number"
            value="1"
          />
          <span>
             of 
            2
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Next Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-next"
              style="margin-left: 10px; margin-right: 10px;"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M16 27v-10l-10 10v-22l10 10v-10l11 11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Last Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-last"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M24 4v24h-4v-11l-10 10v-22l10 10v-11z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      style="width: 100%; text-align: center; margin-top: 10px;"
    >
      <div
        style="margin: -8px auto;"
      >
        <span>
          Show
        </span>
        <input
          class="paging-records-per-page"
          data-testid="rpp-input"
          type="number"
          value="50"
        />
        <span>
          Records per Page
        </span>
        <span
          class="paging-summary"
        >
          <span>
            Displaying 0 - 50 of 100
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paging Toolbar should handle prev button click 1`] = `
<div>
  <div
    class="paging-toolbar-wrapper"
  >
    <div
      style="width: 100%; display: flex;"
    >
      <div
        style="margin: 0px auto;"
      >
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M8 28v-24h4v11l10-10v22l-10-10v11z"
            />
          </svg>
        </span>
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M18 5v10l10-10v22l-10-10v10l-11-11z"
            />
          </svg>
        </span>
        <span
          style="margin-left: 10px; margin-right: 10px; height: 8px;"
        />
        <span
          style="vertical-align: text-bottom;"
        >
          <span>
            Page
          </span>
          <input
            class="paging-toolbar-current-page"
            data-testid="current-page-input"
            max="5"
            min="0"
            type="number"
            value="1"
          />
          <span>
             of 
            5
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Next Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-next"
              style="margin-left: 10px; margin-right: 10px;"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M16 27v-10l-10 10v-22l10 10v-10l11 11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Last Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-last"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M24 4v24h-4v-11l-10 10v-22l10 10v-11z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      style="width: 100%; text-align: center; margin-top: 10px;"
    >
      <div
        style="margin: -8px auto;"
      >
        <span>
          Show
        </span>
        <input
          class="paging-records-per-page"
          data-testid="rpp-input"
          type="number"
          value="20"
        />
        <span>
          Records per Page
        </span>
        <span
          class="paging-summary"
        >
          <span>
            Displaying 0 - 20 of 100
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paging Toolbar should handle zero results 1`] = `
<div>
  <div
    class="paging-toolbar-wrapper"
  >
    <div
      style="width: 100%; display: flex;"
    >
      <div
        style="margin: 0px auto;"
      >
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M8 28v-24h4v11l10-10v22l-10-10v11z"
            />
          </svg>
        </span>
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M18 5v10l10-10v22l-10-10v10l-11-11z"
            />
          </svg>
        </span>
        <span
          style="margin-left: 10px; margin-right: 10px; height: 8px;"
        />
        <span
          style="vertical-align: text-bottom;"
        >
          <span>
            Page
          </span>
          <input
            class="paging-toolbar-current-page"
            data-testid="current-page-input"
            max="0"
            min="0"
            type="number"
            value="1"
          />
          <span>
             of 
            1
          </span>
        </span>
        <span
          style="margin-left: 10px; margin-right: 10px;"
        >
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M24 4v24h-4v-11l-10 10v-22l10 10v-11z"
            />
          </svg>
        </span>
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M16 27v-10l-10 10v-22l10 10v-10l11 11z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      style="width: 100%; text-align: center; margin-top: 10px;"
    >
      <div
        style="margin: -8px auto;"
      >
        <span>
          Show
        </span>
        <input
          class="paging-records-per-page"
          data-testid="rpp-input"
          type="number"
          value="20"
        />
        <span>
          Records per Page
        </span>
        <span
          class="paging-summary"
        >
          <span>
            Displaying 0 - 0 of 0
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paging Toolbar should render properly 1`] = `
<div>
  <div
    class="paging-toolbar-wrapper"
  >
    <div
      style="width: 100%; display: flex;"
    >
      <div
        style="margin: 0px auto;"
      >
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M8 28v-24h4v11l10-10v22l-10-10v11z"
            />
          </svg>
        </span>
        <span>
          <svg
            fill-opacity="var(--toastify__toast-icon-color-dark)"
            height="100%"
            style="width: 32px; height: 32px; opacity: 0.2;"
            viewBox="0 0 32 32"
            width="100%"
          >
            <path
              d="M18 5v10l10-10v22l-10-10v10l-11-11z"
            />
          </svg>
        </span>
        <span
          style="margin-left: 10px; margin-right: 10px; height: 8px;"
        />
        <span
          style="vertical-align: text-bottom;"
        >
          <span>
            Page
          </span>
          <input
            class="paging-toolbar-current-page"
            data-testid="current-page-input"
            max="5"
            min="0"
            type="number"
            value="1"
          />
          <span>
             of 
            5
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Next Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-next"
              style="margin-left: 10px; margin-right: 10px;"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M16 27v-10l-10 10v-22l10 10v-10l11 11z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="mcl-tooltip-wrapper"
        >
          <div
            class="mcl-tooltip-bubble mcl-tooltip-bottom dark"
          >
            <div
              class="mcl-tooltip-message"
              style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 3px;"
            >
              Last Page
            </div>
          </div>
          <span
            class="mcl-tooltip-trigger"
          >
            <span
              class="paging-button"
              data-testid="handle-last"
            >
              <svg
                fill-opacity="var(--toastify__toast-icon-color-dark)"
                height="100%"
                style="width: 32px; height: 32px;"
                viewBox="0 0 32 32"
                width="100%"
              >
                <path
                  d="M24 4v24h-4v-11l-10 10v-22l10 10v-11z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      style="width: 100%; text-align: center; margin-top: 10px;"
    >
      <div
        style="margin: -8px auto;"
      >
        <span>
          Show
        </span>
        <input
          class="paging-records-per-page"
          data-testid="rpp-input"
          type="number"
          value="20"
        />
        <span>
          Records per Page
        </span>
        <span
          class="paging-summary"
        >
          <span>
            Displaying 0 - 20 of 100
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
